<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/get_location"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"

        android:layout_marginBottom="12dp"
        android:background="@color/purple_700"
        android:src="@drawable/baseline_my_location_24"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/hiGoogle"
        android:layout_width="406dp"
        android:layout_height="68dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:visibility="visible"
        android:focusable="true"
        android:src="@drawable/hi"
        app:layout_constraintBottom_toTopOf="@+id/news_Recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </ImageView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/action_explore"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/explore">

            </ImageView>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">

        </View>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/All_news"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/news_icon">

            </ImageView>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">

        </View>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/action_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/mic">

            </ImageView>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">

        </View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/action_google_lens"
                android:layout_width="50dp"
                android:layout_marginEnd="20dp"
                android:layout_height="50dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/googlelens">

            </ImageView>
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/news_Recyclerview"
        android:layout_width="389dp"
        android:layout_height="606dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/news_items" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="Top News"
        app:layout_constraintBottom_toTopOf="@+id/news_Recyclerview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>