<resources>
    <string name="app_name">MyGoogleAssistant</string>
    <string name="google_assistant">Google Assistant</string>
    <string name="todo">TODO</string>
    <string name="first_message">"Hello , How may i help you"</string>
    <string name="secound_message">"Can you tell me something?"</string>
    <string name="OPEN_WEATHER_MAP_API_KEY">bf22c70e24903d3e62f2d8bc76802942</string>
    <string name="image">Image</string>
    <string name="text_from_image">Text From Image</string>
    <string name="search">Search</string>
    <string name="text_will_appear_here">Text will appear here</string>
    <string name="image_preview">image preview</string>
    <string name="get_temperature_here">Get temperature here</string>
    <string name="today">Today</string>
    <string name="add_image">Add Image</string>
    <string name="title_activity_current_location">CurrentLocationActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>